cmake_minimum_required(VERSION 3.16)
project(CppLeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(runBuySellCode BestTimetoBuyAndSell.cpp)

add_executable(runTwoSum TwoSum.cpp)

add_executable(runContainsDuplicate ContainsDuplicate.cpp)

add_executable(runSameTree SameTree.cpp)

add_executable(runSubtreeOfAnotherTree SubTreeOfAnotherTree.cpp)

add_executable(runInvertBinaryTree InvertBinaryTree.cpp)

add_executable(runClimbingStairs ClimbingStairs.cpp)

add_executable(runValidAnagram ValidAnagram.cpp)

add_executable(runRotateImage RotateImage.cpp)

add_executable(runMatrixSum MatrixSum.cpp)

add_executable(runSetMatrixZero SetMatrixZero.cpp)

add_executable(runValidPalindrome ValidPalindrome.cpp)

add_executable(runTopkFrequentElements TopkFrequentElements.cpp)

add_executable(runValidParanthesis ValidParantheses.cpp)
